[workspace]
resolver = "2"
members = [
    "experiments/kdl-experiment",
    "source/river",
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[patch.crates-io.pingora-load-balancing]
git = "https://github.com/memorysafety/pingora.git"
rev = "12ca93c6b187a68ff9a526b4c4e669f602244366"
# path = "../pingora/pingora-load-balancing"

[patch.crates-io.pingora-core]
git = "https://github.com/memorysafety/pingora.git"
rev = "12ca93c6b187a68ff9a526b4c4e669f602244366"
# path = "../pingora/pingora-core"

[patch.crates-io.pingora-cache]
git = "https://github.com/memorysafety/pingora.git"
rev = "12ca93c6b187a68ff9a526b4c4e669f602244366"
# path = "../pingora/pingora-cache"

[patch.crates-io.pingora-http]
git = "https://github.com/memorysafety/pingora.git"
rev = "12ca93c6b187a68ff9a526b4c4e669f602244366"
# path = "../pingora/pingora-http"

[patch.crates-io.pingora-proxy]
git = "https://github.com/memorysafety/pingora.git"
rev = "12ca93c6b187a68ff9a526b4c4e669f602244366"
# path = "../pingora/pingora-proxy"

[patch.crates-io.static-files-module]
git = "https://github.com/jamesmunns/pandora-web-server.git"
rev = "f3a84be5d3be0daa65303f62aa01d0b57e7cc708"
# path = "../pandora-web-server/static-files-module"

[patch.crates-io.pandora-module-utils]
git = "https://github.com/jamesmunns/pandora-web-server.git"
rev = "f3a84be5d3be0daa65303f62aa01d0b57e7cc708"
# path = "../pandora-web-server/pandora-module-utils"
