[workspace]
resolver = "2"
members = [
    "experiments/kdl-experiment",
    "source/river",
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[patch.crates-io.pingora-load-balancing]
git = "https://github.com/memorysafety/pingora.git"
rev = "a98eadde498a45f32ab906d629342954fa173d11"
# path = "../pingora/pingora-load-balancing"

[patch.crates-io.pingora-core]
git = "https://github.com/memorysafety/pingora.git"
rev = "a98eadde498a45f32ab906d629342954fa173d11"
# path = "../pingora/pingora-core"

[patch.crates-io.pingora-cache]
git = "https://github.com/memorysafety/pingora.git"
rev = "a98eadde498a45f32ab906d629342954fa173d11"
# path = "../pingora/pingora-cache"

[patch.crates-io.pingora-http]
git = "https://github.com/memorysafety/pingora.git"
rev = "a98eadde498a45f32ab906d629342954fa173d11"
# path = "../pingora/pingora-http"

[patch.crates-io.pingora-proxy]
git = "https://github.com/memorysafety/pingora.git"
rev = "a98eadde498a45f32ab906d629342954fa173d11"
# path = "../pingora/pingora-proxy"

[patch.crates-io.static-files-module]
git = "https://github.com/pandora-web-server/pandora-web-server.git"
rev = "fe5d7dfc7d943d2bd8371309084a775db99e84f0"
# path = "../pandora-web-server/static-files-module"

[patch.crates-io.pandora-module-utils]
git = "https://github.com/pandora-web-server/pandora-web-server.git"
rev = "fe5d7dfc7d943d2bd8371309084a775db99e84f0"
# path = "../pandora-web-server/pandora-module-utils"
