[package]
name = "kdl-experiment"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdl = "4.6.0"
miette = { version = "5.10.0", features = ["fancy"] }
pingora = "0.2.0"
thiserror = "1.0.61"
