[package]
name          = "river"

# VERSION NOTE:
#
# Once we have our first crates-io release, we should yank the v0.1
# placeholder release. At the moment, we can't publish on crates-io
# as we are carrying patches of pingora.
version       = "0.2.0"

authors       = [
    "James Munns <james@onevariable.com>",
]
edition       = "2021"
readme        = "../../README.md"
repository    = "https://github.com/memorysafety/river"
description   = "A reverse proxy application, based on the pingora library from Cloudflare"
license       = "Apache-2.0"
categories    = [

]
keywords      = [
    "proxy",
]
documentation = "https://docs.rs/river/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
async-trait = "0.1.79"
log = "0.4.21"
regex = "1.10.4"
tokio = "1.37.0" # TODO: check for implicit feature usage
toml = "0.8.12"
tracing = "0.1.40"

[dependencies.tracing-subscriber]
version  = "0.3.18"
features = [
    "fmt",
    "tracing-log",
]

[dependencies.clap]
version  = "4.5.4"
features = [
    "derive",
]

[dependencies.serde]
version  = "1.0.197"
features = [
    "derive"
]

# Pingora dependencies

[dependencies.pingora]
version = "0.2.0"

[dependencies.pingora-core]
version = "0.2.0"

[dependencies.pingora-proxy]
version = "0.2.0"

[dependencies.pingora-http]
version = "0.2.0"
